[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory-mcp-server"
version = "0.1.0"
description = "Persistent memory for AI agents — store, retrieve and search knowledge across sessions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "AiAgentKarl"}]
keywords = ["mcp", "memory", "ai-agents", "persistence", "knowledge-base", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/agent-memory-mcp-server"
Repository = "https://github.com/AiAgentKarl/agent-memory-mcp-server"

[tool.hatch.build.targets.wheel]
packages = ["src"]
